lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: "render_test_backend_debug(width, height, |f|\n{ composer.render(f.area(), f.buffer_mut()); })"
---
"                                                                                                    "
"› Ask FreeChaOS to do anything                                                                      "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  / for commands                             ! for shell commands                                   "
"  shift + enter for newline                  tab to queue message                                   "
"  @ for file paths                           ctrl + v to paste images                               "
"  ctrl + g to edit in external editor        esc again to edit previous message                     "
"  ctrl + c to exit                                                                                  "
"  ctrl + t to view transcript                ctrl + o to view logs                                  "
"  ctrl + l to clear screen (idle)            ctrl + p to cycle permissions                          "
"  Agents (empty draft; no popup)                                                                    "
"  ⌥ + ← previous agent        ⌥ + → next agent                                                      "
"  Panes (multiple panes open; no popup)                                                             "
"  ⌥ + h/j/k/l focus ←/↓/↑/→        shift + ⌥ + h/j/k/l resize panes                                 "
"  ⌥ + enter cycle focus            ⌥ + q close one pane                                             "
"  ⌥ + w close all panes                                                                             "
"  Full reference: man/chaos-keyboard.7.md                                                           "
