lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__large.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Pasted Content 1005 chars]                                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
