lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__multiple_pastes.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Pasted Content 1003 chars][Pasted Content 1007 chars] another short paste                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
