lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__remote_image_rows.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: terminal.backend()
---
"                                                                                                    "
"  [Image #1]                                                                                        "
"  [Image #2]                                                                                        "
"                                                                                                    "
"› describe these                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
