lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__slash_popup_mo.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: terminal.backend()
---
"                                                            "
"› /mo                                                       "
"                                                            "
"                                                            "
"  /model  choose what model and reasoning effort to use     "
