lib/libui/bottom_pane/chat_composer/snapshots/libui__bottom_pane__chat_composer__tests__slash_popup_res.snap
---
source: lib/libui/bottom_pane/chat_composer/tests.rs
expression: terminal.backend()
---
"                                                            "
"› /res                                                      "
"                                                            "
"                                                            "
"                                                            "
"  /resume  resume a saved chat                              "
